# syncthing-rust

./: .gitignore  .release-notes-v0.1.0.md  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  IMPLEMENTATION_SUMMARY.md  INTEROP_TEST_REPORT.md  LICENSE  MVP_RECOVERY_PLAN.md  PROJECT_STATUS.md  README-zh.md  README.md  README_DESKTOP.md  TESTING_GUIDE_FOR_GRAY.md  TODAY_WORK_REPORT.md  WAVE2_MILESTONE_REPORT.md  WAVE3_MILESTONE_REPORT.md  WAVE3_PLAN.md  start_rust_syncthing.ps1  stress-test-quick.csv  syncthing_validation.ps1  validate_interop.ps1
.agents/skills/bep-protocol/: SKILL.md
.cargo/: audit.toml
.github/workflows/: ci.yml  release.yml
.kimi/: SESSION_STARTER.md
acceptance-tests/: Cargo.toml  net_acceptance.rs
archive/: bep-interop-fixes-2026-04-11.patch
archive/2026-04-04-bep-handshake/: ACCEPTANCE_CHECKLIST.md  ACCEPTANCE_CRITERIA.md  AGENT_DELIVERY_VERIFICATION.md  AGENT_TASK_ALLOCATION.md  BEP_HANDSHAKE_FIX_PLAN.md  BEP_HANDSHAKE_STATUS.md  COMPATIBILITY_ANALYSIS.md  COMPLETION_ASSESSMENT.md  DEMO_SUMMARY.md  DEVELOPMENT_PLAN.md  DEVICE_ID_FIX_SPEC.md  DEVICE_ID_FIX_SUMMARY.md  DISCOVERY_IMPLEMENTATION.md  FEATURE_IMPLEMENTATION_ANALYSIS.md  FINAL_IMPLEMENTATION_TASKS.md  FINAL_POLISH_TASKS.md  FINAL_VERIFICATION_REPORT.md  INTEROP_TEST_REPORT.md  INTEROP_TEST_SUMMARY.md  MASTER_PLAN.md  PROJECT_COMPLETION_REPORT.md  STATUS.md  VERIFICATION_REPORT.md  VERIFICATION_STANDARD.md  verification-checklist.md
archive/2026-04-11-cleanup/acceptance-tests-legacy/: Cargo.toml  net_acceptance.rs
archive/2026-04-11-cleanup/syncthing-sync-unverified/: Cargo.toml
archive/2026-04-11-cleanup/syncthing-sync-unverified/src/: accept_loop.rs  conflict.rs  connection_manager.rs  folder_model.rs  index.rs  lib.rs  model.rs  model_trait.rs  pull_scheduler.rs  puller.rs  pusher.rs  scan_scheduler.rs  service.rs
archive/tasks/: Agent-D-task-ARCHIVED.md  Agent-E-task-ARCHIVED.md
archive/temp-bep-tests/test_lz4/: Cargo.toml
archive/temp-bep-tests/test_read_u32/: Cargo.toml
archive/temp-bep-tests/test_write_u32/: Cargo.toml
cmd/src/tui/: daemon_runner.rs  ui.rs
cmd/syncthing/: Cargo.toml
cmd/syncthing-mcp-bridge/: Cargo.toml
cmd/syncthing-mcp-bridge/src/: main.rs
cmd/syncthing/src/: api_server.rs  lib.rs  logging_buffer.rs  main.rs  syncbench.rs  test_harness.rs
cmd/syncthing/src/tui/: app.rs  bep_handler.rs  daemon_runner.rs  discovery_tasks.rs  events.rs  mod.rs  nat_tasks.rs  relay_listener.rs  theme.rs  ui.rs
cmd/syncthing/src/tui/popups/: add_device.rs  add_folder.rs  error.rs  help.rs  mod.rs
cmd/syncthing/src/tui/views/: devices.rs  folders.rs  logs.rs  mod.rs  overview.rs
cmd/syncthing/src/tui/widgets/: header.rs  log_line.rs  mod.rs  progress.rs  spinner.rs  status_bar.rs
crates/bep-protocol/: Cargo.toml  KNOWN_ISSUES.md
crates/bep-protocol/src/: connection.rs  handshake.rs  lib.rs  messages.rs
crates/src/: connection.rs  handshake.rs  messages.rs
crates/syncthing-api/: Cargo.toml
crates/syncthing-api/src/: config.rs  events.rs  handlers.rs  lib.rs  rest.rs
crates/syncthing-api/src/rest/: config.rs  db.rs  device.rs  folder.rs  mod.rs  system.rs  system_ops.rs
crates/syncthing-core/: Cargo.toml
crates/syncthing-core/src/: device_id.rs  error.rs  identity.rs  lib.rs  traits.rs  types.rs  validation.rs
crates/syncthing-db/: Cargo.toml  KNOWN_ISSUES.md
crates/syncthing-db/src/: block_cache.rs  kv.rs  lib.rs  metadata.rs  store.rs
crates/syncthing-fs/: Cargo.toml
crates/syncthing-fs/src/: filesystem.rs  ignore.rs  lib.rs  scanner.rs  watcher.rs
crates/syncthing-net/: Cargo.toml
crates/syncthing-net/src/: connection.rs  dialer.rs  discovery.rs  handshaker.rs  identity.rs  lib.rs  manager.rs  metrics.rs  netmon.rs  protocol.rs  session.rs  stun.rs  tcp_transport.rs  tls.rs  transport.rs  upnp.rs
crates/syncthing-net/src/derp/: client.rs  mod.rs  pipe.rs  protocol.rs  server.rs  transport.rs
crates/syncthing-net/src/discovery/: events.rs  global.rs  local.rs  mod.rs
crates/syncthing-net/src/manager/: config.rs  dialer.rs  entry.rs  events.rs  handle.rs  mod.rs  registry.rs  stats.rs
crates/syncthing-net/src/portmapper/: mod.rs  pcp.rs  pmp.rs  upnp.rs
crates/syncthing-net/src/relay/: client.rs  dial.rs  mod.rs  pool.rs  protocol.rs  types.rs
crates/syncthing-net/src/transport/: bep_adapter.rs  mod.rs  proxy.rs  tcp.rs  websocket.rs
crates/syncthing-sync/: Cargo.toml
crates/syncthing-sync/src/: block_server.rs  conflict_resolver.rs  database.rs  error.rs  events.rs  folder_model.rs  ignore.rs  index.rs  index_handler.rs  lib.rs  model.rs  puller.rs  scanner.rs  service.rs  supervisor.rs  sync_task.rs  watcher.rs
crates/syncthing-test-utils/: Cargo.toml
crates/syncthing-test-utils/src/: lib.rs
deliverables/wave-1/: STATUS.md  TASK_ASSIGNMENTS.md
deliverables/wave-1/agent-net-1/: REPORT.md  TASK.md
deliverables/wave-1/agent-net-2/: REPORT.md  TASK.md
deliverables/wave-1/agent-net-3/: REPORT.md  TASK.md  discovery_tests.rs
docs/: ENGINEERING_ANALYSIS_2026-04-09.md  FEATURE_COMPARISON.md  GITHUB_OPTIMIZATION.md  IMPLEMENTATION_SUMMARY.md  PHASE3_PLAN.md  PHASE4_PLAN.md  README.md  TODAY_WORK_REPORT_syncthing_2026-04-15.md  TODAY_WORK_REPORT_syncthing_2026-04-17.md  VERIFICATION_REPORT_BEP_2026-04-11.md  ai-protocol.md  improvement-plan.md
docs/archive/: GITHUB_OPTIMIZATION.md  STAGE_REPORT_SYNCTHING_2026-04-10.md
docs/design/: ARCHITECTURE_DECISIONS.md  NETWORK_DISCOVERY_DESIGN.md  TUI_DESIGN.md
docs/plans/: CONFIG_SERIALIZATION_ANALYSIS_2026-04-27.md  GRAY_SIDE_OPS.md  INDEX.md  OFFLINE_HANDOVER_2026-04-27.md  PHASE3_PLAN.md  PHASE4_PLAN.md  PLAN_AUDIT_2026-04-27.md  POST_V0_2_0_ROADMAP.md  improvement-plan.md
docs/reports/: IMPLEMENTATION_SUMMARY.md
scripts/: check-health.ps1  monitor_phase22.ps1
tasks/: Agent-A-task.md  Agent-B-task.md
verification-reports/: FINAL_VERIFICATION_REPORT_20250403.md  IROH_MIGRATION_REPORT.md  MASTER_FINAL_REPORT_20250403.md  MASTER_VERIFICATION_REPORT.md  MASTER_VERIFICATION_REPORT_20250403.md  WAVE_1_ACCEPTANCE_REPORT.md
(+5 files in other folders)
