[workspace]
resolver = "2"

members = [
    "crates/syncthing-core",
    "crates/syncthing-net",
    "crates/syncthing-sync",
    "crates/syncthing-fs",
    "crates/syncthing-db",
    "crates/syncthing-api",
    "crates/syncthing-test-utils",
    "crates/bep-protocol",
    "cmd/syncthing",
    "cmd/syncthing-mcp-bridge",
]

[workspace.dependencies]
# 异步运行时
tokio = { version = "1.35", features = ["full"] }
tokio-rustls = "0.26"
async-trait = "0.1"
futures = "0.3"

# TLS / 安全
rustls = "0.23"
rustls-pemfile = "2.0"
ring = "0.17"
ed25519-dalek = "2.1"

# 序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
prost = "0.12"
prost-build = "0.12"

# 错误处理
thiserror = "1.0"
anyhow = "1.0"

# 加密 / 哈希
sha2 = "0.10"
rand = "0.8"
hex = "0.4"
base64 = "0.21"

# 工具
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1.6", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
bytes = "1.5"
dashmap = "5.5"
parking_lot = "0.12"
notify = "8"
tempfile = "3"
walkdir = "2"

# 可选传输层
tokio-tungstenite = "0.24"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
