[package]
name = "syncthing-api"
version = "0.1.0"
edition = "2021"
authors = ["Agent-F <UNVERIFIED>"]
description = "REST API and configuration - UNVERIFIED DELIVERY"
license = "MPL-2.0"
publish = false

[dependencies]
syncthing-core = { path = "../syncthing-core" }
syncthing-db = { path = "../syncthing-db" }
syncthing-net = { path = "../syncthing-net" }
syncthing-sync = { path = "../syncthing-sync" }

# 异步
tokio = { workspace = true }
async-trait = { workspace = true }

# Web
axum = { version = "0.7", features = ["ws"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# 序列化
serde = { workspace = true }
serde_json = { workspace = true }

# 错误处理
thiserror = { workspace = true }

# 加密
sha2 = { workspace = true }

# 工具
tracing = { workspace = true }

# Async utilities
futures-util = "0.3"

# Config
toml = "0.8"
notify = "6"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3"
