[package]
name = "syncthing-core"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
hex = { workspace = true }
rand = { workspace = true }
sha2 = { workspace = true }
async-trait = { workspace = true }

[dev-dependencies]
tokio-test = "0.4"
