[package]
name = "syncthing-db"
version = "0.1.0"
edition = "2021"
authors = ["Agent-E <UNVERIFIED>"]
description = "Block and metadata storage - UNVERIFIED DELIVERY"
license = "MPL-2.0"
publish = false

[dependencies]
syncthing-core = { path = "../syncthing-core" }

# 异步
tokio = { workspace = true }
async-trait = { workspace = true }

# Storage
sled = "0.34"

# LRU cache
lru = "0.16.3"

# 序列化
serde = { workspace = true }
serde_json = { workspace = true }



[dev-dependencies]
tokio-test = "0.4"
tempfile = { workspace = true }
futures = "0.3"
