[package]
name = "syncthing-fs"
version = "0.1.0"
edition = "2021"
authors = ["Agent-B <UNVERIFIED>"]
description = "Filesystem abstraction and monitoring - UNVERIFIED DELIVERY"
license = "MPL-2.0"
publish = false

[dependencies]
syncthing-core = { path = "../syncthing-core" }

# 异步
tokio = { workspace = true }
async-trait = { workspace = true }

# 文件监控
notify = { workspace = true }

# 工具
tracing = { workspace = true }
walkdir = { workspace = true }
regex = "1.10"
libc = "0.2"



[dev-dependencies]
tokio-test = "0.4"
tempfile = { workspace = true }
