[package]
name = "syncthing-net"
version = "0.1.0"
edition = "2021"

[dependencies]
syncthing-core = { path = "../syncthing-core" }

tokio = { workspace = true }
tokio-rustls = { workspace = true }
rustls = { workspace = true }
rustls-pemfile = { workspace = true }
serde = { workspace = true }
serde_json = "1.0"
thiserror = { workspace = true }
tracing = { workspace = true }
bytes = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }
dashmap = { workspace = true }
parking_lot = { workspace = true }
rand = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
hex = { workspace = true }
sha2 = { workspace = true }
base64 = { workspace = true }
prost = { workspace = true }
igd = { version = "0.12", features = ["aio", "tokio"] }
rcgen = { version = "0.13", features = ["pem"] }
# iroh transport is optional and requires a local clone:
#   git clone https://github.com/n0-computer/iroh.git dev/third_party/iroh
# Then uncomment the line below and build with --features iroh.
# iroh = { path = "../../dev/third_party/iroh/iroh", default-features = false, features = ["tls-ring"], optional = true }
bep-protocol = { path = "../bep-protocol" }
netdev = "0.41"
lz4 = "1"

[features]
default = []
# iroh = ["dep:iroh"]

[dev-dependencies]
tokio-test = "0.4"
tracing-subscriber = { workspace = true }
