[package]
name = "syncthing-net"
version = "0.2.0"
edition = "2021"

[dependencies]
syncthing-core = { path = "../syncthing-core" }

tokio = { workspace = true }
tokio-rustls = { workspace = true, features = ["ring"] }
rustls = { workspace = true, features = ["ring"] }
rustls-pemfile = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
bytes = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }
dashmap = { workspace = true }
parking_lot = { workspace = true }
rand = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
hex = { workspace = true }
sha2 = { workspace = true }
base64 = { workspace = true }
prost = { workspace = true }
igd = { version = "0.12", features = ["aio", "tokio"] }
rcgen = { version = "0.13", features = ["pem"] }
bep-protocol = { path = "../bep-protocol" }
netdev = "0.41"
lz4 = "1"
tokio-tungstenite = { workspace = true, optional = true }

[features]
default = []
websocket = ["dep:tokio-tungstenite"]

[dev-dependencies]
tokio-test = "0.4"
tracing-subscriber = { workspace = true }
syncthing-test-utils = { path = "../syncthing-test-utils" }
