[package]
name = "syncthing-sync"
version = "0.1.0"
edition = "2021"

[dependencies]
syncthing-core = { path = "../syncthing-core" }
bep-protocol = { path = "../bep-protocol" }

tokio = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = "1.0"
chrono = { workspace = true }
uuid = { workspace = true }
hex = { workspace = true }
sha2 = { workspace = true }
async-trait = { workspace = true }
dashmap = { workspace = true }
parking_lot = { workspace = true }
futures = { workspace = true }
bytes = { workspace = true }
thiserror = { workspace = true }
rand = { workspace = true }
async-recursion = "1.0"
notify = "7.0"

[dev-dependencies]
tokio-test = "0.4"
tracing-subscriber = { workspace = true }
tempfile = "3.0"
