[package]
name = "syncthing-sync"
version = "0.1.0"
edition = "2021"

[dependencies]
syncthing-core = { path = "../syncthing-core" }
bep-protocol = { path = "../bep-protocol" }

tokio = { workspace = true }
tracing = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
sha2 = { workspace = true }
async-trait = { workspace = true }
dashmap = { workspace = true }
bytes = { workspace = true }
thiserror = { workspace = true }
async-recursion = "1.0"
notify = { workspace = true }

[dev-dependencies]
tokio-test = "0.4"
tracing-subscriber = { workspace = true }
tempfile = { workspace = true }
